# crossdrop

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/agents/: developer.agent.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: ARCHITECTURE.md
resources/icons/: icon.icns
src/: app.rs  main.rs
src/core/: config.rs  engine.rs  helpers.rs  initializer.rs  mod.rs  peer_registry.rs  persistence.rs  transaction.rs
src/core/connection/: crypto.rs  iroh.rs  mod.rs  ticket.rs  webrtc.rs
src/core/connection/webrtc/: connection.rs  control.rs  data.rs  helpers.rs  initializer.rs  mod.rs  receiver.rs  sender.rs  types.rs
src/core/connection/webrtc/control/: chat.rs  file_transfer.rs  key_rotation.rs  remote_access.rs  verification.rs
src/core/pipeline/: chunk.rs  chunk_sizer.rs  merkle.rs  mod.rs  receiver.rs  sender.rs
src/core/protocol/: coordinator.rs  manifest.rs  mod.rs
src/core/security/: identity.rs  message_auth.rs  mod.rs  replay.rs  session.rs
src/ui/: commands.rs  executer.rs  mod.rs  notify.rs  traits.rs
src/ui/helpers/: formatters.rs  loader.rs  mod.rs  time.rs
src/ui/panels/: chat.rs  connect.rs  files.rs  home.rs  id.rs  key_listener.rs  logs.rs  mod.rs  peers.rs  remote.rs  send.rs  settings.rs
src/ui/popups/: context.rs  mod.rs  peer_info.rs  remote_path.rs  save_path.rs  transaction.rs
src/ui/widgets/: mod.rs  progress_bar.rs
src/utils/: atomic_write.rs  clipboard.rs  crypto.rs  data_dir.rs  global_keyboard.rs  hash.rs  log_buffer.rs  mod.rs  sos.rs
src/workers/: app.rs  args.rs  mod.rs  peer.rs  settings.rs  tui.rs
