[package]
name = "crossdrop"
version = "0.3.0"
authors = ["Andrea Frolli <dev.sh1zen@outlook.it>"]
edition = "2024"
description = "A minimalistic terminal file-sharer written in Rust."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sh1zen/crossdrop"
repository = "https://github.com/sh1zen/crossdrop"
keywords = ["file", "share", "filesystem", "command-line"]
categories = ["command-line-utilities", "filesystem", "development-tools"]

[dependencies]
# Networking & P2P
iroh = "0.96.1"          # discovery, key exchange, relay
webrtc = "0.17.1"        # data channels peer-to-peer
tokio = { version = "1.49.0" }
bytes = "1.11.1"
# Cryptography & Security
sha3 = "0.10.8"
aes-gcm = "0.11.0-rc.3"
rand = "0.10.0"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
brotli = "8.0.2"
hex = "0.4.3"
# Serialization & Data formats
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.12+spec-1.1.0"
# TUI / Terminal
ratatui = { version = "0.30.0", features = ["crossterm"] }
crossterm = "0.29"
# CLI & Configuration
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
# Errors & utilities
anyhow = "1.0.101"
# Logging & tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
# OS integration
opener = "0.8.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
