[package]
name = "crossdrop"
version = "0.1.0"
authors = ["Andrea Frolli <dev.sh1zen@outlook.it>"]
edition = "2024"
description = "A minimalistic terminal peer-to-peer written in Rust."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sh1zen/crossdrop"
repository = "https://github.com/sh1zen/crossdrop"
keywords = ["file", "share", "filesystem", "command-line"]
categories = ["command-line-utilities", "filesystem", "development-tools"]

[dependencies]
# Networking & P2P
iroh = { version = "0.97.0", features = ["default", "address-lookup-mdns"] }
webrtc = "0.17.1"
tokio = { version = "1.52.0" }
futures-lite = "2.6.0"
bytes = "1.11.1"
# Cryptography & Security
sha3 = "0.10.8"
aes-gcm = "0.11.0-rc.3"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rand = "0.10.0"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
base64 = "0.22.1"
brotli = "8.0.2"
hex = "0.4.3"
# Serialization & Data formats
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2+spec-1.1.0"
# TUI / Terminal
ratatui = { version = "0.30.0", features = ["crossterm"] }
crossterm = "0.29.0"
# CLI & Configuration
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
# Errors & utilities
anyhow = "1.0.102"
# Logging & tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
# Global input handling (cross-platform)
rdev = "0.5.3"

[target.'cfg(target_os="windows")'.build-dependencies]
winresource = "0.1.31"

# ============================================================================
# Build Profiles
# ============================================================================
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = 'unpacked'

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
strip = true
panic = "abort"

# ============================================================================
# Package Metadata
# ============================================================================
[package.metadata.packager]
product-name = "crossdrop"
identifier = "app.crossdrop.crossdrop"
authors = ["Andrea Frolli <dev.sh1zen@outlook.it>"]
publisher = "crossdrop"
category = "Utility"
copyright = "Copyright © 2026"
formats = ["wix", "deb", "pacman", "dmg"]
before-packaging-command = "cargo build --release"
icons = ["resources/icons/icon.icns", "resources/icons/icon.ico", "resources/icons/256x256.png"]
out-dir = "target/packages"

[package.metadata.winresource]
ProductName = "crossdrop"
FileDescription = "crossdrop"
